--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 ">
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="https://ryanlee.cn/">
-  <link rel="alternate" type="application/rss+xml" title="五绣" href="https://ryanlee.cn/feed.xml">
+  <link rel="canonical" href="https://githuba3b5.github.io/githubA3B5/">
+  <link rel="alternate" type="application/rss+xml" title="五绣" href="https://githuba3b5.github.io/githubA3B5/feed.xml">
 </head>
 
 
