--- a/qjump.html
+++ b/qjump.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="1,url=http://dsm.cn:9555/api/qrcode/qinglong">
+    <!--<meta http-equiv="refresh" content="1,url=http://dsm.cn:9555/api/qrcode/qinglong">-->
   </head>
   <body>
+    <iframe src="http://dsm.cn:9555/api/qrcode/qinglong"></iframe>
   </body>
 </html>
